samples/_failures_safe/1761251102_13a994_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1dabc793.c: In function ‘main’:
./samples/SAFE/__tmp_1dabc793.c:147:16: error: missing terminating " character
  147 |         printf("Addition
      |                ^~~~~~~~~
./samples/SAFE/__tmp_1dabc793.c:147:9: error: expected expression at end of input
  147 |         printf("Addition
      |         ^~~~~~
./samples/SAFE/__tmp_1dabc793.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1dabc793.c:147:9: error: expected declaration or statement at end of input
